@@ -1,5 +1,6 @@
-2009-03-08 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>
+2009-09-26 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>
 
+	* Replaced category and psot URI with permalink
 	* Added option to display excerpt for first article only, for all articles or not display at all
 	* Added option to shorten excerpts to specified length (in characters)
 	* Added option to shorten post title to specified length (in characters)
